[DEV-11815] Fix contacts block spacing/border regression

--- a/modules/Contacts/ui/Contacts.module.scss
+++ b/modules/Contacts/ui/Contacts.module.scss
@@ -1,9 +1,4 @@
 .contacts {
-    padding: $spacing-8 0;
-    border-top: 1px solid $color-borders;
-}
-
-.container {
     @include container;
 }
 
